--- a/part5/bloglist-frontend/src/index.css
+++ b/part5/bloglist-frontend/src/index.css
@@ -6,11 +6,20 @@
   color: green;
 }
 
-.info, .error {
+.info,
+.error {
   background: lightgrey;
   font-size: 20px;
   border-style: solid;
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 10px;
+}
+
+.blog {
+  padding-top: 10px;
+  padding-left: 2px;
+  border: solid;
+  border-width: 1px;
+  margin-bottom: 5px;
 }
